# ai-metrics

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ingest.yml
config/: multipliers.yaml  tools.yaml
dashboard/: app.py
data/public/: README.md  chatgpt_2025-07_2026-06.csv  chatgpt_202606.csv
src/ai_metrics/: bootstrap.py  cli.py  config.py  db.py  identity.py  report.py  sample_data.py  schema.sql  views.sql
src/ai_metrics/ingest/: __init__.py  base.py  exports.py  peruser_chat.py  roster.py  survey.py
src/ai_metrics/ingest/api/: __init__.py  claude_code.py  copilot_metrics.py  openai_compliance.py
tests/: conftest.py  test_bootstrap.py  test_chatgpt_real_export.py  test_end_to_end.py  test_ingest.py  test_kpis.py  test_long_period.py  test_survey.py
