[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-metrics"
version = "0.1.0"
description = "Ingestion pipeline and KPI reporting for enterprise AI tool usage, hours saved, and ROI"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=0.10",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.49", "altair>=5.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
ai-metrics = "ai_metrics.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_metrics = ["*.sql"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
